--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,9 +23,9 @@ stages:
   - job: Build
     displayName: Build
     pool:
-      name: Default          # Use your Default pool
+      name: Default
       demands:
-        - agent.name -equals ubuntu-selfhosted   # Optional: restrict to this agent only
+        - agent.name -equals ubuntu-selhosted   # fixed name
     steps:
     - task: Docker@2
       displayName: Build and push an image to container registry
